"""libsl3 - A C++ wrapper for SQLite3"""

# SQLite version configuration - single source of truth
SQLITE_RELEASE_YEAR = 2025
SQLITE3_MINOR = 49
SQLITE3_PATCH = 2

module(
    name = "libsl3",
    version = "1.2.{}".format(SQLITE3_MINOR * 1000 + SQLITE3_PATCH),
)

# Core Bazel modules
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "0.0.11")

# Use http_archive for dependencies not in BCR
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# SQLite dependency - using http_archive since not in BCR
# URL format: 3MMMPPP where MMM=minor padded to 3 digits, PPP=patch padded to 3 digits
# For 3.47.2: 3 + 047 + 002 + 00 = 3470200 (not 3047200)
_sqlite_version_number = 3000000 + SQLITE3_MINOR * 10000 + SQLITE3_PATCH * 100
http_archive(
    name = "sqlite",
    build_file = "//third_party:sqlite.BUILD",
    urls = ["https://www.sqlite.org/{}/sqlite-amalgamation-{}.zip".format(SQLITE_RELEASE_YEAR, _sqlite_version_number)],
    strip_prefix = "sqlite-amalgamation-{}".format(_sqlite_version_number),
    sha256 = "921fc725517a694df7df38a2a3dfede6684024b5788d9de464187c612afb5918",

)

# Doctest for testing - using http_archive with its own BUILD file
http_archive(
    name = "doctest",
    urls = ["https://github.com/doctest/doctest/archive/v2.4.12.tar.gz"],
    sha256 = "73381c7aa4dee704bd935609668cf41880ea7f19fa0504a200e13b74999c2d70",
    strip_prefix = "doctest-2.4.12",
)
