"""libsl3 - A C++ wrapper for SQLite3"""

# SQLite version configuration - single source of truth
SQLITE3_MINOR = 51

SQLITE3_PATCH = 2

SQLITE3_VERSION = "3.{}.{}".format(SQLITE3_MINOR, SQLITE3_PATCH)

module(
    name = "libsl3",
    version = "1.2.{}".format(SQLITE3_MINOR * 1000 + SQLITE3_PATCH),
)

# Core Bazel modules
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")

# Library dependencies from the Bazel Central Registry
bazel_dep(name = "sqlite3", version = SQLITE3_VERSION, repo_name = "sqlite")
bazel_dep(name = "doctest", version = "2.4.12.bcr.1")
