SET (TESTNAME dataset)
SET (TESTPREFIX sl3test)

SET( test_SRC
  datasettest.cpp
)


ADD_EXECUTABLE( ${TESTPREFIX}_${TESTNAME} ${test_SRC} $<TARGET_OBJECTS:doctest_main>)

TARGET_LINK_LIBRARIES( ${TESTPREFIX}_${TESTNAME} sl3 ${sl3_sqlite3LIBS} ${OPTION_GCOVLIB})

add_test( NAME ${TESTPREFIX}_${TESTNAME} COMMAND ${TESTPREFIX}_${TESTNAME} )

