load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "rowcallback_test",
    timeout = "short",
    srcs = ["rowcallbacktest.cpp"],
    deps = [
        "//:sl3",
        "//tests:doctest_main",
    ],
)

cc_test(
    name = "rowcallback_coverage_test",
    timeout = "short",
    srcs = ["rowcallbacktest_coverage.cpp"],
    deps = [
        "//:sl3",
        "//tests:doctest_main",
    ],
)
