


ADD_EXECUTABLE( sl3_sample main.cpp )
TARGET_LINK_LIBRARIES( sl3_sample sl3 ${mysqlt3_LIBS} ${OPTION_GCOVLIB})


ADD_EXECUTABLE( sl3_sample1 main1.cpp )
TARGET_LINK_LIBRARIES( sl3_sample1 sl3 ${mysqlt3_LIBS} ${OPTION_GCOVLIB})


ADD_EXECUTABLE( sl3_sample2 main2.cpp )
TARGET_LINK_LIBRARIES( sl3_sample2 sl3 ${mysqlt3_LIBS} ${OPTION_GCOVLIB})


ADD_EXECUTABLE( sl3_sample3 main3.cpp )
TARGET_LINK_LIBRARIES( sl3_sample3 sl3 ${mysqlt3_LIBS} ${OPTION_GCOVLIB})


ADD_EXECUTABLE( sl3_sample4 main4.cpp )
TARGET_LINK_LIBRARIES( sl3_sample4 sl3 ${mysqlt3_LIBS} ${OPTION_GCOVLIB})


ADD_EXECUTABLE( sl3_sample5 main5.cpp )
TARGET_LINK_LIBRARIES( sl3_sample5 sl3 ${mysqlt3_LIBS} ${OPTION_GCOVLIB})


ADD_EXECUTABLE( sl3_sample6 main6.cpp )
TARGET_LINK_LIBRARIES( sl3_sample6 sl3 ${mysqlt3_LIBS} ${OPTION_GCOVLIB})
