SET (TESTNAME database)
SET (TESTPREFIX sl3)

SET( test_SRC
  dbtest.cpp
)


ADD_EXECUTABLE( ${TESTPREFIX}_${TESTNAME} ${test_SRC} $<TARGET_OBJECTS:doctest_main>)

TARGET_LINK_LIBRARIES( ${TESTPREFIX}_${TESTNAME} sl3 ${mysqlt3_LIBS} ${OPTION_GCOVLIB})

add_test( NAME ${TESTPREFIX}_${TESTNAME} COMMAND ${TESTPREFIX}_${TESTNAME} )

